[gd_scene load_steps=3 format=3 uid="uid://dwmy7fr08hpcd"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_k6sde"]
[ext_resource type="PackedScene" uid="uid://cdw510bsfrnhw" path="res://scene_transition.tscn" id="2_lqgfg"]

[node name="Main_menu" type="Node2D"]
script = ExtResource("1_k6sde")

[node name="Button" type="Button" parent="."]
offset_left = 162.0
offset_top = 525.0
offset_right = 412.0
offset_bottom = 590.0
text = "Play"

[node name="Button2" type="Button" parent="."]
offset_left = 773.0
offset_top = 529.0
offset_right = 1023.0
offset_bottom = 594.0
text = "Settings"

[node name="scene_transition" parent="." instance=ExtResource("2_lqgfg")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="done" from="scene_transition" to="." method="_on_scene_transition_done"]
